Links to tryq9.com and talk video added.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="contact">
               <h4 class="contact-header">Office</h4>
               305, N University Street,
-              LWSN 3133-14.
+              LWSN 3133-24.
             </div>
             <div class="contact">
               <h4 class="contact-header">E-mail</h4>
@@ -35,15 +35,17 @@
             href="http://cs.purdue.edu">Purdue CS</a>.  My advisor is
           <a href="https://www.cs.purdue.edu/homes/suresh">Prof.
             Suresh Jagannathan</a>. The focus of my current research
-          is on reducing the complexity of programming systems with
-          weak consistency guarantees, such as NoSQL stores (check out
-          <a href="http://gowthamk.github.io/Quelea/">Quelea</a>). I
-          have previously worked on dependent type systems for
-          functional languages (see <a
-            href="http://tycon.github.io/catalyst/">Catalyst</a>) and
-          region type systems for stream processing languages. I
-          frequently blog my research notes <a
-            href="http://tycon.github.io/">here</a>.  </p>
+          is on building effective programming abstractions and
+          reasoning techniques for systems with weak consistency
+          guarantees, such as NoSQL stores (check out <a
+          href="http://gowthamk.github.io/Quelea/">Quelea</a> and <a
+          href="http://tryq9.com/">Q9</a>) and non-ACID relational
+          databases. I have previously worked on dependent type
+            systems for functional languages (see <a
+          href="http://tycon.github.io/catalyst/">Catalyst</a>) and
+        region type systems for stream processing languages. I
+        frequently blog my research notes <a
+          href="http://tycon.github.io/">here</a>.  </p>
 
   <p>Previously, I spent some time building publishing tools at Yahoo!
   India.  I earned M.S in CS from Purdue in 2016, and B.E in CS from
@@ -54,9 +56,8 @@
     Google PhD Fellow</a> in Programming Technology and Software
   Engineering</p>
 
-  <p><span class="highlight-text" >I am currently on the job market. I
-    am actively looking for a research position in academia or
-    industry.</span></p>
+  <p><span class="highlight-text" >I am currently on the
+    academic/industry-research job market.</span></p>
 
     <div style="clear: both"></div>
     </div>
@@ -75,6 +76,7 @@
                Object-Oriented Programming, Systems, Languages and
                Applications (OOPSLA), November 2018. [<a
                  href="docs/q9.pdf">Paper</a>]
+               [<a href="https://www.youtube.com/watch?v=OCQpj2f4qJc">Talk</a>]
               </li>
           </ul>
           </p>
@@ -115,6 +117,7 @@
                45th ACM SIGPLAN Symposium on Principles of Programming
                Languages (POPL), January 2018. [<a
                  href="docs/popl18.pdf">Paper</a>]
+               [<a href="https://www.youtube.com/watch?v=VQ-amH2Y67A">Talk</a>]
               </li>
           </ul>
           </p>
@@ -127,6 +130,7 @@
               <li>
               ML Family Workshop, September 2017. [<a
                 href="https://goo.gl/zT4UDn">Paper</a>]
+               [<a href="https://www.youtube.com/watch?v=nHnnjm7nAGY">Talk</a>]
               </li>
           </ul>
           </p>
@@ -228,6 +232,7 @@
         <h3 class="section-header-long">Research Software</h3>
           <ul>
             <li><a href="http://gowthamk.github.io/Quelea">Quelea</a></li>
+            <li><a href="https://github.com/gowthamk/q6/">Q9</a></li>
             <li><a href="https://github.com/gowthamk/catalyst">Catalyst</a></li>
             <li><a href="https://github.com/gowthamk/Z3MLton">MLton FFI interface generator</a> for Z3 C API</li>
           </ul>
@@ -261,7 +266,7 @@
             href="http://tycon.github.io/cheryl-birthday.html">try
             SAT solving them</a>.
         </div>
-        <div class="misc-item">Or, checkout some of our programming <a
+        <div class="misc-item">Or, checkout some of my programming <a
             href="https://www.facebook.com/pcpcomics/">geek
             comics</a>.
         </div>
