--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
   <h3 class="section-header">Publications</h3>
           <p class="pub-item">
             <div class="pub-title">
+              Version Control Is For Your Data Too
+            </div>
+            (Gowtham Kaki, KC Sivaramakrishnan, and Suresh Jagannathan) 
+            <ul>
+              <li>
+               3rd Summit on Advances in Programming Languages (SNAPL), May 2019. 
+              </li>
+          </ul>
+          </p>
+          <p class="pub-item">
+            <div class="pub-title">
               Safe Replication through Bounded Concurrency Verification
             </div>
             (Gowtham Kaki, Kapil Earanky, KC Sivaramakrishnan, and Suresh
