SNAPL'19 preprint added

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <ul>
               <li>
                3rd Summit on Advances in Programming Languages (SNAPL), May 2019. 
+               [<a href="docs/snapl19.pdf">Pre-print</a>]
               </li>
           </ul>
           </p>
