--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
   <h3 class="section-header">Publications</h3>
           <p class="pub-item">
             <div class="pub-title">
+              Relational Reasoning for Mergeable Replicated Data Types
+            </div>
+            (Gowtham Kaki, Swarn Priya, KC Sivaramakrishnan, and Suresh Jagannathan) 
+            <ul>
+              <li>
+               (Conditionally accepted to) 33rd ACM SIGPLAN
+               International Conference on Object-Oriented
+                 Programming, Systems, Languages and Applications
+                 (OOPSLA), October 2019. [<a
+                   href="docs/mrdt.pdf">Draft</a>]
+              </li>
+          </ul>
+          </p>
+          <p class="pub-item">
+            <div class="pub-title">
               Version Control Is For Your Data Too
             </div>
             (Gowtham Kaki, KC Sivaramakrishnan, and Suresh Jagannathan) 
