Life update + OOPSLA preprint

--- a/index.html
+++ b/index.html
@@ -30,22 +30,23 @@
               &lt;firstname&gt; at purdue.edu
             </div>  
           </div>
-          <p>I am a Ph.D candidate in Programming Languages and
-          Software Engineering at <a
-            href="http://cs.purdue.edu">Purdue CS</a>.  My advisor is
-          <a href="https://www.cs.purdue.edu/homes/suresh">Prof.
-            Suresh Jagannathan</a>. The focus of my current research
-          is on building effective programming abstractions and
-          reasoning techniques for systems with weak consistency
-          guarantees, such as NoSQL stores (check out <a
-          href="http://gowthamk.github.io/Quelea/">Quelea</a> and <a
+          <p>I recently finished my Ph.D in Programming Languages and
+             Software Engineering, and continuing as a
+             Visiting Asst. Professor at <a
+             href="http://cs.purdue.edu">Purdue CS</a>. I was advised by <a
+             href="https://www.cs.purdue.edu/homes/suresh">Prof.
+             Suresh Jagannathan</a>. My recent
+             research focus has been on building effective
+             programming abstractions and reasoning techniques for
+             systems with weak consistency guarantees, such as NoSQL
+             stores
+                 (check out <a
+            href="http://gowthamk.github.io/Quelea/">Quelea</a> and <a
           href="http://tryq9.com/">Q9</a>) and non-ACID relational
           databases. I have previously worked on dependent type
-            systems for functional languages (see <a
-          href="http://tycon.github.io/catalyst/">Catalyst</a>) and
-        region type systems for stream processing languages. I
-        frequently blog my research notes <a
-          href="http://tycon.github.io/">here</a>.  </p>
+          systems for functional languages and region type systems for
+            stream processing languages. I frequently blog my research
+            notes <a href="http://tycon.github.io/">here</a>.  </p>
 
   <p>Previously, I spent some time building publishing tools at Yahoo!
   India.  I earned M.S in CS from Purdue in 2016, and B.E in CS from
@@ -71,11 +72,10 @@
             (Gowtham Kaki, Swarn Priya, KC Sivaramakrishnan, and Suresh Jagannathan) 
             <ul>
               <li>
-               (Conditionally accepted to) 33rd ACM SIGPLAN
-               International Conference on Object-Oriented
-                 Programming, Systems, Languages and Applications
-                 (OOPSLA), October 2019. [<a
-                   href="docs/mrdt.pdf">Draft</a>]
+               33rd ACM SIGPLAN International Conference on
+               Object-Oriented Programming, Systems, Languages and
+                 Applications (OOPSLA), October 2019. [<a
+                   href="docs/mrdt.pdf">Pre-Print</a>]
               </li>
           </ul>
           </p>
