MRDT title change

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <h3 class="section-header">Publications</h3>
           <p class="pub-item">
             <div class="pub-title">
-              Relational Reasoning for Mergeable Replicated Data Types
+              Mergeable Replicated Data Types
             </div>
             (Gowtham Kaki, Swarn Priya, KC Sivaramakrishnan, and Suresh Jagannathan) 
             <ul>
