Office desk no updated

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <div class="contact">
               <h4 class="contact-header">Office</h4>
               305, N University Street,
-              LWSN 3133-24.
+              LWSN 2116N.
             </div>
             <div class="contact">
               <h4 class="contact-header">E-mail</h4>
-              &lt;firstname&gt; at purdue.edu
+              gowtham@purdue.edu
             </div>  
           </div>
           <p>I recently finished my Ph.D in Programming Languages and
