Twitter link added

--- a/index.html
+++ b/index.html
@@ -21,14 +21,11 @@
               <img src="images/profile-image.jpg" />
             </div>
             <div class="contact">
-              <h4 class="contact-header">Office</h4>
-              305, N University Street,
-              LWSN 2116N.
+              <h4 class="contact-header">Contact</h4>
+              305, N University Street, LWSN 2116N.<br />
+              gowtham@purdue.edu<br />
+              <a href="https://twitter.com/gowthamk">@gowthamk</a>
             </div>
-            <div class="contact">
-              <h4 class="contact-header">E-mail</h4>
-              gowtham@purdue.edu
-            </div>  
           </div>
           <p>I recently finished my Ph.D in Programming Languages and
              Software Engineering, and continuing as a
