typo; git push -u origin master

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="contact">
               <h4 class="contact-header">Contact</h4>
-              305, N University Street, LWSN 2116N.<br />
+              305 N University Street, LWSN 2116N.<br />
               gowtham@purdue.edu<br />
               <a href="https://twitter.com/gowthamk">@gowthamk</a>
             </div>
