--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
   Engineering</p>
 
   <p><span class="highlight-text" >I am currently on the
-    academic/industry-research job market.</span></p>
+    academic/industry-research job market.</span>
+    [<a href="docs/cv.pdf">CV</a>]
+  </p>
 
     <div style="clear: both"></div>
     </div>
