--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="contact">
               <h4 class="contact-header">Contact</h4>
               305 N University Street, LWSN 2116N.<br />
-              gowtham@purdue.edu<br />
+              gkaki@purdue.edu<br />
               <a href="https://twitter.com/gowthamk">@gowthamk</a>
             </div>
           </div>
