Added link to RS

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
   <p><span class="highlight-text" >I am currently on the
     academic/industry-research job market.</span>
-    [<a href="docs/cv.pdf">CV</a>]
+  [<a href="docs/cv.pdf">CV</a> | 
+   <a href="docs/research-statement.pdf">RS</a>]
   </p>
 
     <div style="clear: both"></div>
