Removed "industry research"

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   Engineering</p>
 
   <p><span class="highlight-text" >I am currently on the
-    academic/industry-research job market.</span>
+    academic job market.</span>
   [<a href="docs/cv.pdf">CV</a> | 
    <a href="docs/research-statement.pdf">RS</a>]
   </p>
