--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     Google PhD Fellow</a> in Programming Technology and Software
   Engineering</p>
 
-  <p>I will join the <a href="https://plv.colorado.edu/">CUPLV</a>
+  <p>I will join the <a href="https://plv.colorado.edu/">PLV</a>
   group at <a href="https://www.colorado.edu/cs/">CU Boulder CS</a> as
   an Assistant Professor in August 2020.
 
